# knights-and-merchants

./: .gitignore  README.md
Knights and Merchants/: CMakeLists.txt
Knights and Merchants/data/gfx/: MAP.BBM  mapgold.lbm  pal0.bbm  pal1.bbm  pal2.bbm  pal3.bbm  pal4.bbm  pal5.bbm  setup.lbm  setup2.bbm
Knights and Merchants/data/gfx/fonts/: adam.fnt  antiqua.fnt  briefing.fnt  font01.fnt  grey.fnt  maina.old  metal.fnt  mini.fnt  mininum.fnt  outline.fnt  won.fnt
Knights and Merchants/data/misc/: setup.lib  text.lib
Knights and Merchants/data/mission/dmaps/: save00.map  save01.map  save04.map  save06.map  save07.map  save10.map
Knights and Merchants/data/mission/mmaps/: save00.map  save01.map  save03.map  save04.map  save05.map  save08.map
Knights and Merchants/data/mission/smaps/: save00.map  tutorial.map
Knights and Merchants/data/sfx/songs/: track_00.sng  track_01.sng  track_02.sng  track_03.sng  track_04.sng  track_05.sng  track_06.sng  track_07.sng  track_09.sng  track_10.sng  track_11.sng  track_12.sng  track_13.sng  track_14.sng
Knights and Merchants/data/sfx/speech/: CITIZ00.snd  CITIZ01.snd  TOWN00.snd  TOWN01.snd  UNITS00.snd  UNITS01.snd
Knights and Merchants/data/sfx/speech/AXEMAN/: ATTACK0.snd  ATTACK1.snd  ATTACK2.snd  ATTACK3.snd  ATTACK4.snd  BATTLE0.snd  BATTLE1.snd  BATTLE2.snd  BATTLE3.snd  DEATH0.snd  DEATH1.snd  DEATH2.snd  DEATH3.snd  EAT0.snd  EAT1.snd  FORMAT0.snd  FORMAT1.snd  HALT0.snd  HALT1.snd  HALVE0.snd  HALVE1.snd  HALVE2.snd  JOIN0.snd  JOIN1.snd  JOIN2.snd  LEFT0.snd  LEFT1.snd  RIGHT0.snd  RIGHT1.snd  SELECT0.snd  SELECT1.snd  SELECT2.snd  SELECT3.snd  SELECT4.snd  SEND0.snd  SEND1.snd  SEND2.snd  SEND3.snd  SEND4.snd  STORM0.snd  (+3 more)
Knights and Merchants/data/sfx/speech/BARBARIAN/: ATTACK0.snd  ATTACK1.snd  ATTACK2.snd  ATTACK3.snd  ATTACK4.snd  BATTLE1.snd  BATTLE3.snd  DEATH0.snd  FORMAT0.snd  FORMAT1.snd  HALT0.snd  HALT1.snd  HALVE0.snd  HALVE1.snd  JOIN0.snd  JOIN1.snd  LEFT0.snd  LEFT1.snd  RIGHT0.snd  RIGHT1.snd  SELECT0.snd  SELECT1.snd  SELECT2.snd  SELECT3.snd  SELECT4.snd  SEND0.snd  SEND1.snd  SEND2.snd  SEND3.snd  SEND4.snd  STORM0.snd  STORM1.snd  STORM2.snd  STORM3.snd
Knights and Merchants/data/sfx/speech/BOWMAN/: ATTACK0.snd  ATTACK1.snd  ATTACK2.snd  ATTACK3.snd  ATTACK4.snd  BATTLE0.snd  BATTLE1.snd  BATTLE2.snd  DEATH0.snd  DEATH1.snd  DEATH2.snd  EAT0.snd  EAT1.snd  FORMAT0.snd  FORMAT1.snd  HALT0.snd  HALT1.snd  HALT2.snd  HALVE0.snd  HALVE1.snd  HALVE2.snd  JOIN0.snd  JOIN1.snd  JOIN2.snd  LEFT0.snd  LEFT1.snd  RIGHT0.snd  RIGHT1.snd  SELECT0.snd  SELECT1.snd  SELECT2.snd  SELECT3.snd  SEND0.snd  SEND1.snd  SEND2.snd  SEND3.snd  SEND4.snd
Knights and Merchants/data/sfx/speech/BRIEFING/: Miss02.snd  Miss03.snd  miss01.snd  miss04.snd  miss05.snd  miss06.snd  miss07.snd  miss08.snd  miss09.snd  miss10.snd  miss101.snd  miss102.snd  miss103.snd  miss104.snd  miss105.snd  miss106.snd  miss107.snd  miss108.snd  miss109.snd  miss11.snd  (+14 more)
Knights and Merchants/documentation/: Doxyfile.in
Knights and Merchants/inc/: AnimationEntry.h  AnimationEntryEx.h  Array.h  ArrayBriefings.h  ArrayUnk00.h  ArrayUnkMap.h  ClassyThree.h  ClassyTwo.h  DefinedSounds.h  Globals.h  Group.h  GroupManager.h  House.h  HouseManager.h  HousesDat.h  InGame.h  InterchangeFileFormat.h  Map.h  MasterClass.h  MiniMapMaybe.h  NetworkClass.h  PlayerStatistic.h  PlayerStatistics.h  RandomGenerator.h  Selection.h  Settings.h  Sound.h  SoundManager.h  StoreHouse.h  StoreHouseManager.h  Tile.h  Unit.h  UnitDat.h  UnitManager.h  UnkClass1000.h  UnkClass2000.h  UnkClass3000.h  UnkClass670.h  UnkClass671.h  UnkClass700.h  (+9 more)
Knights and Merchants/inc/engine/: Bitmap.h  DrawableSurface.h  GraphicsHandler.h  InputHandler.h  KeyboardHandler.h  MouseHandler.h  Palette.h  UnkClass5.h  UnkGraphicsClass.h  UnknownStruct.h
Knights and Merchants/inc/graphics/: Bitmap.h  DrawableSurface.h  Font.h  Palette.h  RX.h
Knights and Merchants/inc/io/: FileIo.h  InputHandler.h  IoException.h  KeyboardHandler.h  MouseHandler.h
Knights and Merchants/inc/media/: AVIClass.h
Knights and Merchants/inc/text/: Lib.h
Knights and Merchants/inc/ui/: UnkClass200.h  UnkClass201.h  UnkClass202.h  UnkClass203.h  UnknownUICon.h
Knights and Merchants/inc/ui/controls/: Button.h  ImageBox.h  ScrollTextBox.h  TextBox.h  UIElement.h  UnkClass672.h  UnkClass674.h
Knights and Merchants/inc/utilities/: DoublyLinkedList.h  Parser.h  Rect.h
Knights and Merchants/src/: AnimationEntry.cpp  AnimationEntryEx.cpp  ArrayBriefings.cpp  ArrayUnk00.cpp  ArrayUnkMap.cpp  ClassyThree.cpp  ClassyTwo.cpp  DefinedSounds.cpp  Globals.cpp  Group.cpp  GroupManager.cpp  House.cpp  HouseManager.cpp  HousesDat.cpp  InGame.cpp  InterchangeFileFormat.cpp  Map.cpp  MasterClass.cpp  MiniMapMaybe.cpp  NetworkClass.cpp  PlayerStatistic.cpp  PlayerStatistics.cpp  RandomGenerator.cpp  Selection.cpp  Settings.cpp  Sound.cpp  SoundManager.cpp  StoreHouse.cpp  StoreHouseManager.cpp  Tile.cpp  Unit.cpp  UnitDat.cpp  UnitManager.cpp  UnkClass1000.cpp  UnkClass2000.cpp  UnkClass3000.cpp  UnkClass670.cpp  UnkClass671.cpp  UnkClass700.cpp  UnkClass800.cpp  (+9 more)
Knights and Merchants/src/engine/: Bitmap.cpp  DrawableSurface.cpp  GraphicsHandler.cpp  InputHandler.cpp  KeyboardHandler.cpp  MouseHandler.cpp  Palette.cpp  UnkClass5.cpp  UnkGraphicsClass.cpp
Knights and Merchants/src/graphics/: Bitmap.cpp  DrawableSurface.cpp  Font.cpp  Palette.cpp  RX.cpp
Knights and Merchants/src/io/: FileIo.cpp  InputHandler.cpp  KeyboardHandler.cpp  MouseHandler.cpp
Knights and Merchants/src/media/: AVIClass.cpp
Knights and Merchants/src/text/: Lib.cpp
Knights and Merchants/src/ui/: UnkClass200.cpp  UnkClass201.cpp  UnkClass202.cpp  UnkClass203.cpp  UnknownUICon.cpp
Knights and Merchants/src/ui/controls/: Button.cpp  ImageBox.cpp  ScrollTextBox.cpp  TextBox.cpp  UIElement.cpp  UnkClass672.cpp  UnkClass674.cpp
Knights and Merchants/src/utilities/: Parser.cpp  Rect.cpp
Knights and Merchants/test/io/: FileIo_Tests.cpp
Knights and Merchants/test/text/: Lib_Tests.cpp
Knights and Merchants/test/utilities/: Rect_Tests.cpp
(+281 files in other folders)
